Fix layout bug on Safari

--- a/src/components/organisms/ProductList.css
+++ b/src/components/organisms/ProductList.css
@@ -4,6 +4,8 @@
 .root {
   display: flex;
   flex-direction: column;
+  flex-content: flex-start;
+  align-items: center;
   list-style: none;
   padding-left: 0;
   margin-top: 0;
@@ -14,8 +16,6 @@
    ========================================================================== */
 
 .item {
-  margin-left: auto;
-  margin-right: auto;
   margin-bottom: 20rem;
 
   &:last-of-type {
